--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="js/app.js"></script>
   </head>
   <body>
+    <h1>My Travel Diary</h1>
     <form id="new-item-form">
       <div id="form-wrapper">
         <div class="form-item">
