--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Travel List App</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css"/>
     <script src="js/app.js"></script>
   </head>
   <body>
@@ -24,6 +24,10 @@
           <label for="duration" class="primary">Duration</label>
           <input type="text" id="duration" required/>
         </div>
+
+        <div class="form-item">
+          <label for="dateVisited" class="primary">Date Visited</label>
+          <input type="date" id="dateVisited" required/>
 
         <div class="form-item">
           <label for="rating" class="primary">Rating</label>
